--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-router": "^3.5.3"
+    "vue-resource": "^1.5.3",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
