--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.11",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
   "browserslist": [
