--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-cookie": "^1.1.4",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.3",
     "vuelidate": "^0.7.7",
